--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@vue/tsconfig/tsconfig.json",
   "include": ["vite.config.ts"],
   "compilerOptions": {
+    "strict": true,
     "composite": true,
     "types": ["node", "vite/client"]
   }
