--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "datatables.net-bs5": "^2.1.8",
