--- a/package.json
+++ b/package.json
@@ -11,30 +11,24 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
-    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
-    "datatables.net-bs5": "^2.1.8",
-    "datatables.net-vue3": "^3.0.2",
-    "jquery": "^3.7.1",
-    "lodash-es": "^4.17.21",
     "pinia": "^2.2.6",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@tsconfig/node20": "^20.1.4",
-    "@types/jquery": "^3.5.32",
     "@types/node": "^20.12.5",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^6.1.2",
     "sass": "^1.75.0",
-    "typescript": "~5.4.0",
+    "typescript": "^5.4.0",
     "vite": "^6.2.0",
     "vue-tsc": "^2.0.11"
   }
